# structure-detection-dipolar-depletion

./: .gitignore  README.md  pyproject.toml  requirements.txt
lammps_dump_files/: mu2_eps0.xyz  mu2_eps3.25.xyz  mu4_eps1.xyz
lammps_files/: colloid-eps0.table  colloid-eps1.table  colloid-eps3.25.table  job_run_slurm.sh  lammps_input.lmp
result_dump_files/: mu0_eps0.xyz  mu0_eps1.xyz  mu0_eps3.25.xyz  mu2_eps1.xyz  mu4_eps0.xyz  mu4_eps3.25.xyz
utils/: helpers.py  process.py
