[project]
name = "local-structures-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.11.3",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "ovito>=3.14.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyscal3==3.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]

[tool.uv.sources]
pyscal3 = { git = "https://github.com/pyscal/pyscal3.git" }
